# SemperAugustus

./: .exampleevn  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  requirements_dev.txt  settings.py  setup.cfg  tox.ini
.github/workflows/: tests.yml
ALPHA/api/: .exampleevn  client.py  commands.py  settings.py  stream.py  streamtools.py
ALPHA/api/tests/: test_client.py  test_commands.py  test_settings.py  test_streamtools.py
ALPHA/data/: APIClient.py
ALPHA/docs/: .$Asset_slot.xml.bkp
ALPHA/management/: main,py  portfolio.py
ALPHA/management/backtests/: backtest.py  engine,py  testingtools.py
ALPHA/management/tradings/: risk.py  session.py  sessiontools.py  trading.py
ALPHA/models/: model.py
ALPHA/trading/: broker.py
beta/: main.py
beta/api/: client.py  commands.py  streamtools.py
beta/models/: close_signals.py  default_close_signals.py  risk_menagment.py  trends.py
beta/trading/: broker.py
beta/utils/: setup_loger.py  technical_utils.py  wallet.py
docs/: Asset_slot.xml
src/api/: client.py  commands.py  streamtools.py
src/api/tests/: test_streamtools.py
src/data/: menager.py
src/docs/: credits  main_schema.xml
src/models/: close_signals.py  trends.py
src/trading/: broker.py
src/utils/: controlling.py  dbtools.py  setup_loger.py  technical.py  wallet.py
tests/: test_client.py  test_streamtools.py
tests/unit/: test_client.py  test_commands.py  test_dbtools.py  test_streamtools.py
trading/: broker.py
