[metadata]
name = SemperAugustus
version = v1.0
author = Dominik Teodorczy
description = Algorithmic trading bot
long_description = file: README.md
license = MIT
license_file = LICENSE
platforms = win32
classifiers =
    Programming Language :: Python :: 3.10

[options]
packages =
    api
    data
    models
    trading
    utils
install_requires =
    asttokens>=2
    backcall>=0.1
    black>=23
    click>=8
    colorama>=0.4
    comm>=0.1
    contourpy>=1
    cycler>=0.10
    debugpy>=1
    decorator>=5
    exceptiongroup>=1
    executing>=1
    flake8>=4
    fonttools>=4
    iniconfig>=1
    ipykernel>=6
    ipython>=8
    jedi>=0.17
    jupyter_client>=8
    jupyter_core>=5
    kiwisolver>=1.3
    matplotlib>=3.6
    matplotlib-inline>=0.1
    mypy>=1
    mypy-extensions>=0.8
    nest-asyncio>=1.5
    numpy>=1.24
    packaging>=23
    pandas>=2
    parso>=0.8
    pathspec>=0.10
    pickleshare>=0.7
    Pillow>=9
    platformdirs>=3.4
    pluggy>=0.8
    prompt-toolkit>=3
    psutil>=5
    pure-eval>=0.2
    Pygments>=2
    pyparsing>=3
    pytest>=6
    pytest-cov>=3
    python-dateutil>=2.8
    python-dotenv>=0.8
    pytz>=2023
    pyzmq>=25
    six>=1.10
    stack-data>=0.6
    tomli>=2
    tornado>=6
    tox>=4
    traitlets>=5
    tzdata>=2023
    wcwidth>=0.2
python_requires = >=3.8
package_dir =
    =src
zip_safe = no

[options.packages.find]
where=src

[options.extras_require]
testing =
    flake8>=4
    tox>=4
    pytest>=6
    pytest-cov>=3
    mypy>=1

[options.package_data]
api = py.typed
data = py.typed
models = py.typed
trading = py.typed
utils = py.typed

[flake8]
max-line-lenght = 160